# libhtmlpp

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  config.h.in  libhtmlpp.kdev4
src/: CMakeLists.txt  encode.h  exception.cpp  exception.h  hstring.cpp  hstring.h  html.cpp  html.h  system.cpp  system.h  utils.h
src/cmake/: htmlppConfig.cmake
test/: CMakeLists.txt  csstest.cpp  htmlcopytest.cpp  htmlpagetest.cpp
test/htmlfiles/: right.html  wrong.html
